feat(pgg): validate data